src/objects/Opportunity_Claim_Value_MAG_Setting__mdt.object
<CustomObject>
    <description>Store claim value year at the MAG level</description>
    <fields>
        <fullName>Claim_Value_Quarters__c</fullName>
        <label>Claim Value Quarters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                    <default>true</default>
                    <label>12</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <label>MAG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q69</fullName>
                </value>
                <value>
                    <fullName>R01</fullName>
                    <default>true</default>
                    <label>R01</label>
                </value>
                <value>
                    <fullName>R05</fullName>
                </value>
                <value>
                    <fullName>R06</fullName>
                </value>
                <value>
                    <fullName>R07</fullName>
                </value>
                <value>
                    <fullName>R08</fullName>
                </value>
                <value>
                    <fullName>R09</fullName>
                </value>
                <value>
                    <fullName>R10</fullName>
                </value>
                <value>
                    <fullName>R12</fullName>
                </value>
                <value>
                    <fullName>R13</fullName>
                </value>
                <value>
                    <fullName>R14</fullName>
                </value>
                <value>
                    <fullName>R16</fullName>
                </value>
                <value>
                    <fullName>R21</fullName>
                </value>
                <value>
                    <fullName>R22</fullName>
                </value>
                <value>
                    <fullName>R23</fullName>
                </value>
                <value>
                    <fullName>R24</fullName>
                </value>
                <value>
                    <fullName>R25</fullName>
                </value>
                <value>
                    <fullName>R26</fullName>
                </value>
                <value>
                    <fullName>R27</fullName>
                </value>
                <value>
                    <fullName>R28</fullName>
                </value>
                <value>
                    <fullName>R29</fullName>
                </value>
                <value>
                    <fullName>R30</fullName>
                </value>
                <value>
                    <fullName>R31</fullName>
                </value>
                <value>
                    <fullName>R32</fullName>
                </value>
                <value>
                    <fullName>R33</fullName>
                </value>
                <value>
                    <fullName>R34</fullName>
                </value>
                <value>
                    <fullName>R35</fullName>
                </value>
                <value>
                    <fullName>R36</fullName>
                </value>
                <value>
                    <fullName>R37</fullName>
                </value>
                <value>
                    <fullName>R38</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Claim Value MAG Setting</label>
    <pluralLabel>Opportunity Claim Value MAG Settings</pluralLabel>
</CustomObject>